// Metastore service definition.

syntax = "proto3";

package metastore.service;

import "metastore/catalog.proto";
import "metastore/options.proto";

message FetchCatalogRequest {
  // ID of the database catalog to fetch.
  bytes db_id = 1;
}

message FetchCatalogResponse { catalog.CatalogState catalog = 1; }

// Possible mutations to make.
message Mutation {
  oneof mutation {
    DropSchema drop_schema = 1;
    DropObject drop_object = 2;
    CreateSchema create_schema = 3;
    CreateView create_view = 4;
    // 5
    CreateExternalTable create_external_table = 6;
    CreateExternalDatabase create_external_database = 7;
    DropDatabase drop_database = 8;
    AlterTable alter_table = 9;
    AlterDatabase alter_database = 10;
    CreateTunnel create_tunnel = 11;
    DropTunnel drop_tunnel = 12;
    AlterTunnelRotateKeys alter_tunnel_rotate_keys = 13;
    CreateTable create_table = 14;
    CreateCredentials create_credentials = 15;
    DropCredentials drop_credentials = 16;
    UpdateDeploymentStorage update_deployment_storage = 17;
  }
  // next: 18
}

message DropDatabase {
  string name = 1;
  bool if_exists = 2;
}

message DropSchema {
  string name = 1;
  bool if_exists = 2;
  bool cascade = 3;
}

message DropObject {
  string schema = 1;
  string name = 2;
  bool if_exists = 3;
}

message CreateSchema {
  string name = 1;
  bool if_not_exists = 2;
}

message CreateView {
  string schema = 1;
  string name = 2;
  string sql = 3;
  bool or_replace = 4;
  repeated string columns = 5;
}

message CreateTable {
  string schema = 1;
  string name = 2;
  options.TableOptionsInternal options = 3;
  bool if_not_exists = 4;
  bool or_replace = 5;
}

message CreateExternalTable {
  string schema = 1;
  string name = 2;
  options.TableOptions options = 3;
  bool if_not_exists = 4;
  optional string tunnel = 5;
  bool or_replace = 6;
  // next: 7
}

message CreateExternalDatabase {
  string name = 1;
  options.DatabaseOptions options = 2;
  bool if_not_exists = 3;
  optional string tunnel = 4;
  // next: 5
}

message AlterTableOperationRename {
  string new_name = 1;
}

message AlterTableOperationSetAccessMode {
  catalog.SourceAccessMode access_mode = 1;
}

message AlterTableOperation {
  oneof operation {
    AlterTableOperationRename alter_table_operation_rename = 1;
    AlterTableOperationSetAccessMode alter_table_operation_set_access_mode = 2;
  };
}

message AlterTable {
  string schema = 1;
  string name = 2;
  AlterTableOperation operation = 3;
}

message AlterDatabaseOperationRename {
  string new_name = 1;
}

message AlterDatabaseOperationSetAccessMode {
  catalog.SourceAccessMode access_mode = 1;
}

message AlterDatabaseOperation {
  oneof operation {
    AlterDatabaseOperationRename alter_database_operation_rename = 1;
    AlterDatabaseOperationSetAccessMode alter_database_operation_set_access_mode = 2;
  };
}

message AlterDatabase {
  string name = 1;
  AlterDatabaseOperation operation = 2;
}

message CreateTunnel {
  string name = 1;
  options.TunnelOptions options = 2;
  bool if_not_exists = 3;
  // next: 4
}

message DropTunnel {
  string name = 1;
  bool if_exists = 2;
}

message AlterTunnelRotateKeys {
  string name = 1;
  bool if_exists = 2;
  bytes new_ssh_key = 3;
  // next: 4
}

message CreateCredentials {
  string name = 1;
  options.CredentialsOptions options = 2;
  string comment = 3;
  bool or_replace = 4;
}

message DropCredentials {
  string name = 1;
  bool if_exists = 2;
}

message UpdateDeploymentStorage { uint64 new_storage_size = 1; }

message MutateRequest {
  // Mutate the catalog for this database.
  bytes db_id = 1;

  // Catalog version we're trying to execution mutations against. Mutations will
  // be rejected if this version doesn't match Metastore's version of the
  // catalog.
  uint64 catalog_version = 2;

  // Mutations to attempt to execute against the catalog.
  repeated Mutation mutations = 3;

  // next: 4
}

message MutateResponse {
  enum Status {
    UNKNOWN = 0;
    // Mutation applied.
    APPLIED = 1;
    // Mutation rejected.
    REJECTED = 2;
  }

  // Status of the mutation.
  Status status = 1;

  // The current state of the catalog as witnessed by metastore.
  //
  // If the mutation was accepted, this catalog will included that mutation. If
  // the mutation was rejected, this catalog will not have that mutation
  // applied. In either case, this catalog should replace any stale catalog.
  catalog.CatalogState catalog = 2;

  // next: 3
}

service MetastoreService {
  // Fetch the catalog for some database.
  //
  // The returned catalog will be the latest catalog that this metastore node
  // knows about.
  // TODO: Could be streaming for returning updated catalogs as they get
  // mutated.
  rpc FetchCatalog(FetchCatalogRequest) returns (FetchCatalogResponse);

  // Mutate a database's catalog.
  rpc MutateCatalog(MutateRequest) returns (MutateResponse);
}
